--- a/updater/manifest_conf.json
+++ b/updater/manifest_conf.json
@@ -1,5 +1,5 @@
 {
-  "repo": "https://gitee.com/",
+  "repo": "https://gitee.com/eGlhb2p1emk/cloudgamefix",
   "files": [
     {
       "name": "zlib1.dll",
