--- a/cloudgamefix/cloudgamefix.vcxproj
+++ b/cloudgamefix/cloudgamefix.vcxproj
@@ -141,6 +141,10 @@
     <None Include="logConfig.json">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </None>
+    <None Include="repo.json" />
+    <None Include="version.ini">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </None>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
