--- a/cloudgamefix/logConfig.json
+++ b/cloudgamefix/logConfig.json
@@ -1,28 +1,28 @@
 {
-    "logFormatTime": "[%Ec %A]",
-    "outToTerminal": {
-        "Enable": true,
-        "render": true,
-        "showUser": true,
-        "rootLogger": {
-            "level": "Info",
-            "ostream": "std::clog",
-            "wostream": "std::wclog",
-            "cleanBuffer": {
-                "clean": true,
-                "times": 10
-            }
-        }
+  "logFormatTime": "[%Ec %A]",
+  "outToTerminal": {
+    "Enable": true,
+    "render": true,
+    "showUser": true,
+    "rootLogger": {
+      "level": "trace",
+      "ostream": "std::clog",
+      "wostream": "std::wclog",
+      "cleanBuffer": {
+        "clean": true,
+        "times": 10
+      }
+    }
+  },
+  "logToFile": {
+    "Enable": true,
+    "Dictionary": "${APPDATA}\\cloudgamefixZero\\logs",
+    "File": {
+      "format": true,
+      "TimeFormat": "[%Y %m %d]",
+      "filename": "${format}CloudGameFixZero.log"
     },
-    "logToFile": {
-        "Enable": true,
-        "Dictionary": "${APPDATA}\\cloudgamefixZero\\logs",
-        "File": {
-            "format": true,
-            "TimeFormat": "[%Y %m %d]",
-            "filename": "${format}CloudGameFixZero.log"
-        },
-        "append": false
-    },
-    "EnableThreadSecurity": true
+    "append": false
+  },
+  "EnableThreadSecurity": true
 }
