--- a/cloudgamefix/cloudgamefix.vcxproj
+++ b/cloudgamefix/cloudgamefix.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="cloudgame.json" />
     <None Include="logConfig.json">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </None>
