--- a/cloudgamefix/cloudgamefix.vcxproj
+++ b/cloudgamefix/cloudgamefix.vcxproj
@@ -109,7 +109,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <UACExecutionLevel>RequireAdministrator</UACExecutionLevel>
+      <UACExecutionLevel>HighestAvailable</UACExecutionLevel>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -132,6 +132,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="cloudgamefix.hpp" />
+    <ClInclude Include="dismapi.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cloudgamefix.cpp" />
