--- a/cloudgamefix/cloudgamefix.vcxproj.filters
+++ b/cloudgamefix/cloudgamefix.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="cloudgamefix.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="dismapi.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
