--- a/cloudgamefix/cloudgamefix.vcxproj
+++ b/cloudgamefix/cloudgamefix.vcxproj
@@ -133,6 +133,7 @@
   <ItemGroup>
     <ClInclude Include="cloudgamefix.hpp" />
     <ClInclude Include="dismapi.h" />
+    <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cloudgamefix.cpp" />
@@ -147,6 +148,12 @@
     <None Include="version.ini">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="cloudgamefix.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="icon.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
