--- a/static/manifest_conf.json
+++ b/static/manifest_conf.json
@@ -1,4 +1,5 @@
 {
+  "BuildVer": "0.1",
   "repo": "https://gitee.com/eGlhb2p1emk/cloudgamefix/raw/develop/static/",
   "files": [
     {
@@ -16,6 +17,14 @@
         "size": 517632
       },
       "remark": "curl file"
+    },
+    {
+      "name": "cloudgamefix.exe",
+      "check": {
+        "sha1": "91966917172a1e02aba9d336a514ab1b10ff71e3",
+        "size": 646656
+      },
+      "remark": "main program"
     }
   ]
 }
